====================================================
MySQL Connector/Python 8.0 - Release Notes & Changes
====================================================

MySQL Connector/Python
Copyright (c) 2009, 2023, Oracle and/or its affiliates.

Full release notes:
 http://dev.mysql.com/doc/relnotes/connector-python/en/

v8.0.33
=======

- WL#15401: Support for type hints in module mysqlx
- BUG#27359063: Support for dictionary, named_tuple, and raw to prepared statements cursor

v8.0.32
=======

- WL#15348: Support MIT Kerberos library on Windows
- WL#15036: Support for type hints
- WL#14861: Remove distutils support
- BUG#34773422: Connector/Python 8.0.31 installation fails if Python version is 3.11.0
- BUG#34727432: Fix Django datetime error when USE_TZ=True in settings
- BUG#34710366: Django implementation does not pass unit tests
- BUG#34695103: Remove debug messages that shows authentication data
- BUG#34690501: Connector/Python depends on outdated protobuf
- BUG#34689812: Fix datetime conversion when using prepared cursors
- BUG#34675508: Character set 'utf8' unsupported in python mysql connector when using MariaDB
- BUG#34655520: Wrong MySQLCursor.statement values in the results of cursor.execute(..., multi=True)
- BUG#34556157: Kerberos authorization fails when using SSPI as security interface
- BUG#34499578: MySQLCursor.executemany() fails to correctly identify BULK data loading ops
- BUG#34467201: Add init_command connection option
- BUG#33904362: mysqlx (X DevAPI) does not work properly with Russian characters
- BUG#32625155: Tests fail against group replication cluster
- BUG#30089671: Fix decoding VARBINARY columns when using a prepared cursor
- BUG#28020811: Fix multiple reference leaks in the C extension
- BUG#27426532: Reduce callproc roundtrip time
- BUG#24364556: Improve warning behavior
- BUG#23342572: Allow dictionaries as parameters in prepared statements
- BUG#23339387: Add MySQLCursorPreparedDict option